<resources>
    <string name="app_name">Android Live TV</string>

    <!--<Admob App ID>-->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="top_10_views">Top 10 Views</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>

    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>

    <string name="made_with_in_srilanka">Made With ❤ in Sri Lanka</string>
    <string name="app_developer_by_nemosofts">App developer By : Nemosofts</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="internet_connection_is_not_available">Internet Connection is not available.</string>
    <string name="retey">RETEY</string>

    <string name="add_to_fav">Added to Favourite</string>
    <string name="remove_from_fav">Removed from Favourite</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="exit">exit</string>
    <string name="err_internet_not_conn">err internet</string>
    <string name="ok">Ok</string>

    <string name="welcomeback">Welcome</string>
    <string name="signin_to_continue">Sign In to continue</string>
    <string name="remember_me">Remember Me</string>
    <string name="registering">Registering..</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="signup">SignUp</string>
    <string name="cannot_empty">Field cannot be empty</string>
    <string name="pass_end_space">Please do not add space at end</string>
    <string name="name">Name</string>
    <string name="cpassword">Confirm Password</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_cpassword">Please Enter Confirm Password</string>
    <string name="pass_nomatch">Confirm Password not matched</string>
    <string name="logout">Logout</string>
    <string name="logout_success">Logout Successful</string>
    <string name="image">Image</string>
    <string name="error_password_sort">This password is too short</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="err_server">err server</string>
    <string name="error_nemosofts_key">Error Nemosofts key</string>
    <string name="create_nemosofts_key">Create a new nemosofts key</string>
    <string name="err_no_categories_found">No Categories Found</string>
    <string name="error_unauth_access">Unauthorized Access</string>
    <string name="server_error">Server Error</string>
    <string name="error_connect_net_tryagain">Please connect to internet and try again</string>
    <string name="try_again">Try Again</string>
    <string name="added_to_fav">Added to favourite</string>
    <string name="removed_from_fav">Removed from favourite</string>
    <string name="dialog_text_no_ads_title">Turn Off ads</string>
    <string name="dialog_text_no_ads_description">Use App more free without ads</string>
    <string name="description_subsribte">With our pack. You can enjoy an ad-free experiance . and focus on the  essential!</string>


    <string name="dialog_text_unlimited">Unlimited Channels</string>
    <string name="dialog_text_unlimited_hd">Unlimited HD Live Channels Free</string>
    <string name="all_tv">All Channels</string>
    <string name="latest">Latest</string>
    <string name="most">Most View</string>
    <string name="see_all">See All</string>
    <string name="recent">Recent View</string>

    <string name="enter_name_channel">Please Enter Channel Name</string>
    <string name="watch_your">Watch Your Favorite TV Channels</string>
    <string name="error_package_name">Error Package Name</string>
    <string name="live">Live</string>


</resources>
